Accessibility contrast fix

--- a/src/global.css
+++ b/src/global.css
@@ -3,7 +3,7 @@
 */
 :root {
   --base-black: #1f1f1f;
-  --base-gray: #ababab;
+  --base-gray: #737373;
   --base-red: #e80000;
   --base-text: var(--base-black);
   --base-title: var(--base-black);
